<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.perfil.PerfilFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_perfil_usuario" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/saludo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="175dp"
            android:text="@string/hola"
            android:textSize="@dimen/h6"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inicia_sesion_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bienvenido"
                android:textSize="@dimen/h6"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombre_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/nombre_usuario"
                android:textSize="@dimen/h6"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/btnIniciarSesion"
        android:layout_width="325dp"
        android:layout_height="46dp"
        android:text="@string/inicia_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCrearCuenta"
        android:layout_marginBottom="80dp"
        android:textSize="@dimen/body"
        android:gravity="center"
        android:background="@drawable/gradient_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/btnCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:text="@string/crea_tu_cuenta_"
        android:textSize="@dimen/label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="130dp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/btn_cerrarSesion"
        android:layout_width="325dp"
        android:layout_height="46dp"
        android:text="@string/cerrar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/eliminar_cuenta"
        android:layout_marginBottom="80dp"
        android:textSize="@dimen/body"
        android:gravity="center"
        android:background="@drawable/gradient_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/eliminar_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:text="@string/eliminar_cuenta"
        android:textSize="@dimen/label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="130dp"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>