<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesion">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_lighter"
        />

    <ImageButton android:id="@+id/icono_flecha_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icono_flecha_regresar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:background="@null"
        />

    <TextView
        android:id="@+id/inicia_sesion_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesion"
        android:textSize="@dimen/h2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icono_flecha_regresar"

        />

    <TextView
        android:id="@+id/i_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textStyle="bold"
        android:textSize="@dimen/body"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/inicia_sesion_titulo"
        android:layout_marginTop="39dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="343dp"
        android:layout_height="54dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_label_1"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:padding="1dp"
            android:background="@drawable/borde_btn"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/i_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contrasena"
        android:textSize="@dimen/body"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPassword"
        android:layout_width="343dp"
        android:layout_height="54dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/i_label_2"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        app:passwordToggleEnabled="false"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white_50"
        app:endIconTintMode="multiply"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:textColor="@color/white"
            android:background="@drawable/borde_btn"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/iniciar_sesion"
        android:layout_width="343dp"
        android:layout_height="46dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="35dp"
        android:text="@string/iniciar_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        android:textSize="@dimen/body"
        android:gravity="center"
        android:background="@drawable/gradient_button"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/ya_tienes_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tienes_cuenta"
        android:textSize="@dimen/label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="130dp"
        android:linksClickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>